--- a/ReedHampton/ReedHampton.csproj
+++ b/ReedHampton/ReedHampton.csproj
@@ -314,7 +314,7 @@
     <Content Include="Views\Albums\Delete.cshtml" />
     <Content Include="Views\Albums\Details.cshtml" />
     <Content Include="Views\Albums\Edit.cshtml" />
-    <Content Include="Views\Albums\Index.cshtml" />
+    <Content Include="Views\Albums\AlbumGallery.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
