--- a/ReedHampton/ReedHampton.csproj
+++ b/ReedHampton/ReedHampton.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AlbumsController.cs" />
     <Compile Include="Controllers\ContactInformationController.cs" />
+    <Compile Include="Controllers\DevelopmentProjectsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -253,11 +254,17 @@
     <Compile Include="Migrations\201707090129205_ContactInformation1.0.1.Designer.cs">
       <DependentUpon>201707090129205_ContactInformation1.0.1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707102018218_DevelopmentProject1.0.0.cs" />
+    <Compile Include="Migrations\201707102018218_DevelopmentProject1.0.0.Designer.cs">
+      <DependentUpon>201707102018218_DevelopmentProject1.0.0.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\AlbumViewModel.cs" />
     <Compile Include="Models\ContactInformation.cs" />
+    <Compile Include="Models\DevelopmentProject.cs" />
+    <Compile Include="Models\DevelopmentProjectViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\ImageViewModel.cs" />
@@ -332,6 +339,10 @@
     <Content Include="Views\ContactInformation\Delete.cshtml" />
     <Content Include="Views\ContactInformation\Edit.cshtml" />
     <Content Include="Views\ContactInformation\Index.cshtml" />
+    <Content Include="Views\DevelopmentProjects\Create.cshtml" />
+    <Content Include="Views\DevelopmentProjects\Delete.cshtml" />
+    <Content Include="Views\DevelopmentProjects\Edit.cshtml" />
+    <Content Include="Views\DevelopmentProjects\Portfolio.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -393,6 +404,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707090129205_ContactInformation1.0.1.resx">
       <DependentUpon>201707090129205_ContactInformation1.0.1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707102018218_DevelopmentProject1.0.0.resx">
+      <DependentUpon>201707102018218_DevelopmentProject1.0.0.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
