--- a/ReedHampton/ReedHampton.csproj
+++ b/ReedHampton/ReedHampton.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ProfessionalDocumentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -258,6 +259,14 @@
     <Compile Include="Migrations\201707102018218_DevelopmentProject1.0.0.Designer.cs">
       <DependentUpon>201707102018218_DevelopmentProject1.0.0.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707162253048_ProfessionalDocuments1.0.0.cs" />
+    <Compile Include="Migrations\201707162253048_ProfessionalDocuments1.0.0.Designer.cs">
+      <DependentUpon>201707162253048_ProfessionalDocuments1.0.0.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707162259121_ProfessionalDocuments1.0.1.cs" />
+    <Compile Include="Migrations\201707162259121_ProfessionalDocuments1.0.1.Designer.cs">
+      <DependentUpon>201707162259121_ProfessionalDocuments1.0.1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Album.cs" />
@@ -269,6 +278,8 @@
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\ImageViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ProfessionalDocuments.cs" />
+    <Compile Include="Models\ProfessionalDocumentsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -298,6 +309,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="StaticImages\Black_FaceBook_Logo.jpg" />
     <Content Include="StaticImages\Clean_Cursive_Signature.gif" />
+    <Content Include="StaticImages\Document-64.png" />
     <Content Include="StaticImages\email_64x64.png" />
     <Content Include="StaticImages\GitHub-Mark-64px.png" />
     <Content Include="StaticImages\In-Black-66px-TM.png" />
@@ -343,6 +355,10 @@
     <Content Include="Views\DevelopmentProjects\Delete.cshtml" />
     <Content Include="Views\DevelopmentProjects\Edit.cshtml" />
     <Content Include="Views\DevelopmentProjects\Portfolio.cshtml" />
+    <Content Include="Views\ProfessionalDocuments\Create.cshtml" />
+    <Content Include="Views\ProfessionalDocuments\Delete.cshtml" />
+    <Content Include="Views\ProfessionalDocuments\Edit.cshtml" />
+    <Content Include="Views\ProfessionalDocuments\DocumentPortfolio.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -407,6 +423,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707102018218_DevelopmentProject1.0.0.resx">
       <DependentUpon>201707102018218_DevelopmentProject1.0.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707162253048_ProfessionalDocuments1.0.0.resx">
+      <DependentUpon>201707162253048_ProfessionalDocuments1.0.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707162259121_ProfessionalDocuments1.0.1.resx">
+      <DependentUpon>201707162259121_ProfessionalDocuments1.0.1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
