Made major changes to style and to the AboutMe Home page. Firstly, all pages background colors were changed to a light grey with the <hr> elements changed to maroon. The AboutMe page is almost finished with styling but the backside of the FlipBoards needs a little work. Finally all pathing/routing is now directed to the AboutMe Home View and not the "Home/Index" view.

--- a/ReedHampton/ReedHampton.csproj
+++ b/ReedHampton/ReedHampton.csproj
@@ -369,7 +369,7 @@
     <Content Include="Views\AboutMe\Create.cshtml" />
     <Content Include="Views\AboutMe\Delete.cshtml" />
     <Content Include="Views\AboutMe\Edit.cshtml" />
-    <Content Include="Views\AboutMe\Index.cshtml" />
+    <Content Include="Views\AboutMe\Home.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
